# Dog_Breed_Classifier

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
api/: api.py  class_names.txt
application/: activation_map.py  app.py  class_names.txt
dog_breed_classifier/: config.py  create_dir.py  data_generator.py  evaluate_model.py  get_model.py  main.py  save_model.py  train_model.py
notebook/: notebook.ipynb  requirements.txt
saved_models/: model.h5
tests/: test.py
